syntax = "proto3";

option objc_class_prefix = "HLW";

package protos;

service Crawl {
  rpc Crawl (CrawlRequest) returns (CrawlResponse) {}
}

message CrawlRequest {
  // 以 http:// 或者 https:// 开头的网址
  string url = 1;

  // 抓取超时限制，单位毫秒，设为 0 时无超时
  int64 timeout = 2;

  // 是否仅返回 metadata 而忽略 content
  bool only_return_metadata = 5;

  // 请求的自定义 header
  repeated KV header = 6;

  // 请求方法
  Method method = 7;

  // POST body，仅当请求类型为 POST 时有效
  string post_body = 8;
  string body_type = 9;

  //163.com: gbk;  空白==utf-8; 自动检查 auto,网页内容为<meta>写的不标准时, 会返回utf-8;
  string expect_charset = 10;
}

enum Method {
  GET = 0;
  HEAD = 1;
  POST = 2;
}

message KV {
  string key = 1;
  string value = 2;
}

message CrawlResponse {
  Metadata metadata = 1;
  bytes content = 2;
}

message Metadata {
  uint32 length = 1;
  repeated KV header = 3;
  string status = 4;
  int32 status_code = 5;
  string url = 6;
}
